Webpack and NPM were installed

--- a/index.html
+++ b/index.html
@@ -60,14 +60,7 @@
       </div>
     </div>
   </div>
-  <script class="initial-cards" src="./js/initialCards.js"></script>
-  <script class="card" src="./js/Сard.js"></script>
-  <script class="cardList" src="./js/СardList.js"></script>
-  <script class="popup" src="./js/Popup.js"></script>
-  <script class="userInfo" src="./js/UserInfo.js"></script>
-  <script class="form-validator" src="./js/FormValidator.js"></script>
-  <script class="api" src="./js/api.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+   <script src="src/index.js"></script>
 
 </body>
 
