--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="root">
     <header class="header root__section">
-      <img src="<%=require('./images/logo.svg')%>" alt="mesto logo" class="logo">
+      <img src="./images/logo.svg" alt="mesto logo" class="logo">
     </header>
     <div class="profile root__section">
       <div class="user-info">
@@ -60,7 +60,7 @@
       </div>
     </div>
   </div>
-   <script type="module" src="./dist/main.js"></script>
+  <script type="module" src="./src/index.js"></script>
 
 </body>
 
