--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mesto</title>
-  <link rel="stylesheet" href="style.3d9785df1d3fdf29466e.css">
+  <link rel="stylesheet" href="style.f5155ced470f5678b752.css">
 </head>
 
 <body>
   <div class="root">
     <header class="header root__section">
-      <img src="../../images/logo.svg" alt="mesto logo" class="logo">
+      <img src="./images/logo.svg" alt="mesto logo" class="logo">
     </header>
     <div class="profile root__section">
       <div class="user-info">
