--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>
   </div>
-  <script type="module" src="./src/index.js"></script>
+  <script type="module" src="./js/index.js"></script>
 
 </body>
 
